Bugfix  :: Table sort not visible (#4408)
* bugfix :: table sort missing fix

* bugfix :: sort triggering issue

--- a/frontend/src/_styles/theme.scss
+++ b/frontend/src/_styles/theme.scss
@@ -1890,7 +1890,7 @@ button {
     white-space: normal;
   }
 
-  th div:after {
+  th:after {
     content: " ";
     position: relative;
     height: 0;
